# souk

./: .deny.toml  .gitignore  .gitlab-ci.yml  .typos.toml  Cargo.toml  README.md  gnome-store.doap  meson.build  souk.doap
src/: app.rs  appstream_cache.rs  config.rs  error.rs  flatpak_backend.rs  i18n.rs  lib.rs  main.rs  meson.build  package.rs  path.rs  utils.rs  window.rs  worker.rs
src/backend/: backend_message.rs  flatpak_backend.rs  gpackage.rs  legacy_package.rs  mod.rs  package.rs  package_action.rs  package_transaction.rs  transaction.rs  transaction_mode.rs  transaction_state.rs  utils.rs
src/backend/package/: installed_info.rs  mod.rs  package_action.rs  package_kind.rs  remote_info.rs
src/backend/transaction_backend/: mod.rs  sandbox_backend.rs
src/database/: connection.rs  mod.rs  models.rs  package_database.rs  queries.rs  schema.rs
src/db/: connection.rs  database.rs  mod.rs  models.rs  queries.rs  schema.rs
src/flatpak/: dbus_proxy.rs  installation.rs  mod.rs  transaction.rs  transaction_model.rs  utils.rs  worker.rs
src/flatpak/context/: context.rs  context_detail.rs  context_detail_group.rs  context_detail_group_model.rs  context_detail_level.rs  context_detail_model.rs  context_detail_type.rs  mod.rs
src/flatpak/installation/: installation.rs  installation_model.rs  mod.rs  remote.rs  remote_model.rs
src/flatpak/package/: mod.rs  package.rs  package_model.rs  package_type.rs
src/flatpak/permissions/: app_permissions.rs  device_permission.rs  filesystem_permission.rs  mod.rs  permission_details.rs  permission_summary.rs  service_permission.rs  socket_permission.rs  subsystem_permission.rs
src/flatpak/permissions/types/: device_permission.rs  filesystem_permission.rs  filesystem_permission_type.rs  service_permission.rs  socket_permission.rs  subsystem_permission.rs
src/flatpak/sideload/: bundle.rs  mod.rs  sideload_package.rs  sideload_type.rs  sideloadable.rs
src/flatpak/transaction/: mod.rs  transaction.rs  transaction_model.rs  transaction_type.rs
src/main/: app.rs  dbus_proxy.rs  error.rs  i18n.rs  mod.rs  worker.rs
src/main/appstream/: mod.rs  package_appstream.rs  utils.rs
src/main/context/: context.rs  context_detail.rs  context_detail_group.rs  context_detail_group_model.rs  context_detail_kind.rs  mod.rs
src/main/flatpak/: dbus_proxy.rs  mod.rs  operation_kind.rs  operation_type.rs  utils.rs  worker.rs
src/main/flatpak/context/: context.rs  context_detail.rs  context_detail_group.rs  context_detail_group_model.rs
src/main/flatpak/dry_run/: dry_run.rs  dry_run_package.rs  dry_run_package_model.rs  dry_run_runtime.rs  dry_run_runtime_model.rs  mod.rs
src/main/flatpak/installation/: installation.rs  installation_model.rs  mod.rs  remote.rs  remote_model.rs
src/main/flatpak/package/: mod.rs  package.rs  package_appstream.rs  package_kind.rs  package_model.rs  package_subref_kind.rs
src/main/flatpak/permissions/: app_permissions.rs  mod.rs  permission_details.rs  permission_summary.rs
src/main/flatpak/sideload/: mod.rs  sideload_kind.rs  sideload_package.rs  sideloadable.rs
src/main/flatpak/transaction/: transaction.rs  transaction_model.rs
src/main/task/: mod.rs  operation.rs  operation_kind.rs  operation_model.rs  operation_status.rs  task.rs  task_activity.rs  task_kind.rs  task_model.rs  task_status.rs  task_step.rs  task_step_model.rs  task_type.rs
src/main/ui/: about_dialog.rs  about_window.rs  mod.rs  progressbar.rs  utils.rs  window.rs
src/main/ui/badge/: badge.rs  badge_kind.rs  badge_type.rs  mod.rs
src/main/ui/context/: context_box.rs  context_detail_row.rs
src/main/ui/debug/: debug_window.rs  mod.rs
src/main/ui/installation/: installation_listbox.rs  installation_row.rs
src/main/ui/main/: mod.rs  sidebar.rs  sidebar_item_row.rs  window.rs
src/shared/: config.rs.in  meson.build  mod.rs  package_info.rs  path.rs  worker_error.rs
src/shared/appstream/: mod.rs  operation_kind.rs
src/shared/dry_run/: dry_run.rs  dry_run_result.rs  dry_run_runtime.rs  mod.rs
src/shared/flatpak/: mod.rs  operation_kind.rs  operation_type.rs
src/shared/info/: mod.rs  package_info.rs  remote_info.rs
src/shared/task/: appstream_task.rs  flatpak_task.rs  mod.rs  response.rs  task.rs  task_progress.rs  task_response.rs  task_result.rs  task_status.rs  task_step.rs
src/ui/: about_dialog.rs  app_buttons_box.rs  app_details.rs  app_details_page.rs  app_tile.rs  explore_page.rs  installation_listbox.rs  installation_popover.rs  installation_row.rs  installed_page.rs  mod.rs  package_action_button.rs  package_row.rs  package_tile.rs  project_urls_box.rs  release_row.rs  releases_box.rs  releases_window.rs  screenshots_box.rs  transaction_progressbar.rs  transaction_row.rs  utils.rs  version_row.rs  versions_window.rs  window.rs
src/ui/badge/: badge.rs  badge_type.rs
src/ui/context/: context_box.rs  context_detail_row.rs  mod.rs
src/ui/installation/: installation_listbox.rs  installation_row.rs  mod.rs
src/ui/package_widgets/: action_button.rs  mod.rs  package_action_button.rs  project_urls_box.rs  releases_box.rs  screenshots_box.rs  url_row.rs  versions_box.rs
src/ui/page/: explore_page.rs  installed_page.rs  mod.rs  package_details_page.rs
src/ui/pages/: explore_page.rs  installed_page.rs  loading_page.rs  mod.rs  package_details_page.rs  search_page.rs
src/ui/sideload/: mod.rs  remote_row.rs  sideload_window.rs
src/ui/transaction/: transaction_row.rs
src/worker/: app.rs  appstream_worker.rs  dbus.rs  dbus_server.rs  error.rs  flatpak_worker.rs  mod.rs  process.rs  worker.rs
src/worker/appstream/: mod.rs  utils.rs  worker.rs
src/worker/dbus/: mod.rs  proxy.rs  server.rs
src/worker/flatpak/: command.rs  dry_run_results.rs  mod.rs  progress.rs  response.rs  transaction_handler.rs  worker.rs
src/worker/installation/: installation_info.rs  installation_manager.rs  mod.rs  remote_info.rs
src/worker/package/: mod.rs
src/worker/transaction/: command.rs  dry_run.rs  flatpak_task.rs  flatpak_worker.rs  mod.rs  transaction_command.rs  transaction_dry_run.rs  transaction_manager.rs
(+140 files in other folders)
