[package]
name = "souk"
version = "0.0.0"
authors = ["Felix Häcker <haeckerfelix@gnome.org>"]
edition = "2021"
license = "GPL-3.0-or-later"
default-run = "souk"
rust-version = "1.80"

[dependencies]
appstream = { version = "0.2", features = ["gzip"] }
xmltree = "0.10"
log = "0.4"
pretty_env_logger = "0.5"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
url = "2.2"
uuid = { version = "1.10", features = ["v4"] }
indexmap = "2.3"
futures = "0.3"
futures-util = "0.3"
async-std = { version = "1.11", features = ["unstable"] }
regex = "1.4"
zbus = "4.4"
thiserror = "1.0"
isahc = "1.7"
derivative = "2.2"
rusty_pool = "0.7"
base64 = "0.22.0"

gettext-rs = { version = "0.7", features = ["gettext-system"] }
adw = { version = "0.7", package = "libadwaita", features = ["v1_4"] }
gtk = { version = "0.9", package = "gtk4", features = ["v4_8"] }
flatpak = { version = "0.6.0", package = "libflatpak", features = ["v1_9_1"] }
xb = { version = "0.4.2", package = "libxmlb" }
