[package]
name = "souk"
version = "0.0.0"
authors = ["Felix Häcker <haeckerfelix@gnome.org>"]
edition = "2021"
license = "GPL-3.0-or-later"
default-run = "souk"
rust-version = "1.80"

[dependencies]
appstream = { version = "0.2", features = ["gzip"] }
async-std = { version = "1.11", features = ["unstable"] }
derivative = "2.2"
futures = "0.3"
futures-util = "0.3"
indexmap = "2.3"
isahc = "1.7"
log = "0.4"
pretty_env_logger = "0.5"
regex = "1.4"
rusty_pool = "0.7"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
thiserror = "1.0"
url = "2.2"
uuid = { version = "1.10", features = ["v4"] }
xmltree = "0.11"
zbus = "4.4"

gettext-rs = { version = "0.7", features = ["gettext-system"] }
adw = { version = "0.7", package = "libadwaita", features = ["v1_5"] }
gtk = { version = "0.9", package = "gtk4", features = ["v4_8"] }
flatpak = { version = "0.6.0", package = "libflatpak", features = ["v1_9_1"] }
xb = { version = "0.4.2", package = "libxmlb" }
